@@ -21,6 +21,7 @@ acct_mgr-0.4 (not yet released) - branch 0.11
  * do AccountManager class API cleanup by moving db access to model layer
 
  new features
+ * #874: Add new fields to register form and a registration validation system
  * #9618: HttpAuthStore authentication enhancement
    by allowing a relative URL for `authentication_url` configuration option
  * #9676: Incorporate optional Single-Sign-On functionality
